# binlog

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  ROADMAP.md  makefile
apps/: CMakeLists.txt
apps/decode/: CMakeLists.txt
apps/decode/src/: main.cpp  schema.hpp
apps/encode/: CMakeLists.txt
apps/encode/src/: main.cpp  schema.hpp
docs/: format.md
include/binlog/: concepts.hpp  event.hpp  event_id.hpp  logger.hpp  logger_builder.hpp  reader.hpp  recorder.hpp  spsc.hpp  writer.hpp
include/binlog/backend/: file.hpp  mmap.hpp
include/binlog/backend/file/: reader.hpp  writer.hpp
include/binlog/backend/mmap/: reader.hpp  writer.hpp
include/binlog/concurrency/: spsc.hpp
include/binlog/detail/: format.hpp
include/binlog/macros/: cpu.hpp
include/binlog/types/: base.hpp  internal.hpp  magic.hpp  time.hpp
include/binlog/types/time/: cycles.hpp  mono.hpp  unix.hpp
include/latch/: recorder.hpp  spsc.hpp
src/: CMakeLists.txt  logger.cpp  recorder.cpp
src/backend/: file.cpp  mmap.cpp
src/backend/file/: reader.cpp  writer.cpp
src/backend/mmap/: reader.cpp  writer.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  round_trip.cpp
tests/unit/: CMakeLists.txt  test_reader.cpp
tests/unit/backend/file/: reader.cpp  test_reader.cpp
tools/: CMakeLists.txt
tools/decode/: CMakeLists.txt
tools/inspect/: CMakeLists.txt
